--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Don't include generated js files.
 test/**/*.js
 src/**/*.js
+test/*.js
+src/*.js
 
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
