--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-	"name": "angular-routing",
-	"title": "AngularJS Routing",
-	"description": "State-based routing and view management for AngularJS",
-	"version": "0.0.1",
-	"homepage": "",
-	"author": {
-		"name": "dotjem",
-		"url": "https://github.com/dotJEM"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/dotJEM/angular-routing.git"
-	},
-	"bugs": {
-		"url": "https://github.com/dotJEM/angular-routing/issues"
-	},
-	"licenses": [
-		{
-			"type": "N/A",
-			"url": ""
-		}
-	],
-	"dependencies": {
-	},
-	"devDependencies": {
-		"typescript": "~0.8.3",
-		"testacular": "~0.4.0",
-		"grunt": "~0.4.1",
-		"grunt-contrib-jshint": "~0.1.1",
-		"grunt-contrib-nodeunit": "~0.1.2"
-	},
-	"keywords": []
+  "name": "angular-routing",
+  "title": "AngularJS Routing",
+  "description": "State-based routing and view management for AngularJS",
+  "version": "0.0.1",
+  "homepage": "",
+  "author": {
+    "name": "dotjem",
+    "url": "https://github.com/dotJEM"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dotJEM/angular-routing.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dotJEM/angular-routing/issues"
+  },
+  "licenses": [
+    {
+      "type": "N/A",
+      "url": ""
+    }
+  ],
+  "dependencies": {},
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-typescript": "~0.1.2",
+    "grunt-contrib-jshint": "~0.3.0",
+    "grunt-contrib-nodeunit": "~0.1.2",
+    "grunt-contrib-concat": "~0.1.3",
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-watch": "~0.3.1",
+    "grunt-karma": "~0.3.0"
+  },
+  "keywords": []
 }
