--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - npm install -g testacular
+  - npm install -g karma
   - npm install -g typescript
   - ./nodeserver.sh > /dev/null &
 
