--- a/router.csproj
+++ b/router.csproj
@@ -46,6 +46,21 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include=".gitignore" />
+    <Content Include="build\angular-routing.js" />
+    <Content Include="build\angular-routing.legacy.js" />
+    <Content Include="build\angular-routing.legacy.min.js" />
+    <Content Include="build\angular-routing.min.js" />
+    <Content Include="build\src\common.js" />
+    <Content Include="build\src\directives\jemView.js" />
+    <Content Include="build\src\legacy\templateDecorator.js" />
+    <Content Include="build\src\route.js" />
+    <Content Include="build\src\state.js" />
+    <Content Include="build\src\template.js" />
+    <Content Include="build\src\view.js" />
+    <Content Include="build\test\legacy\routeLegacySpec.js" />
+    <Content Include="build\test\routeSpec.js" />
+    <Content Include="build\test\stateSpec.js" />
+    <Content Include="build\test\viewSpec.js" />
     <Content Include="test-grunt-config.js" />
     <Content Include="gruntfile.js" />
     <Content Include="lib\angular\angular-1.0.d.ts" />
@@ -75,17 +90,11 @@
       <DependentUpon>common.ts</DependentUpon>
     </Content>
     <TypeScriptCompile Include="src\directives\jemView.ts" />
-    <Content Include="src\common.min.js">
-      <DependentUpon>common.ts</DependentUpon>
-    </Content>
     <Content Include="src\directives\jemView.js">
       <DependentUpon>jemView.ts</DependentUpon>
     </Content>
     <TypeScriptCompile Include="src\legacy\templateDecorator.ts" />
     <TypeScriptCompile Include="src\interfaces.d.ts" />
-    <Content Include="src\directives\jemView.min.js">
-      <DependentUpon>jemView.ts</DependentUpon>
-    </Content>
     <Content Include="src\interfaces.d.js">
       <DependentUpon>interfaces.d.ts</DependentUpon>
     </Content>
@@ -93,42 +102,24 @@
       <DependentUpon>templateDecorator.ts</DependentUpon>
     </Content>
     <TypeScriptCompile Include="src\route.ts" />
-    <Content Include="src\legacy\templateDecorator.min.js">
-      <DependentUpon>templateDecorator.ts</DependentUpon>
-    </Content>
     <Content Include="src\route.js">
       <DependentUpon>route.ts</DependentUpon>
     </Content>
     <TypeScriptCompile Include="src\state.ts" />
-    <Content Include="src\route.min.js">
-      <DependentUpon>route.ts</DependentUpon>
-    </Content>
     <Content Include="src\state.js">
       <DependentUpon>state.ts</DependentUpon>
     </Content>
     <TypeScriptCompile Include="src\template.ts" />
-    <Content Include="src\state.min.js">
-      <DependentUpon>state.ts</DependentUpon>
-    </Content>
     <Content Include="src\template.js">
       <DependentUpon>template.ts</DependentUpon>
     </Content>
     <TypeScriptCompile Include="src\view.ts" />
-    <Content Include="src\template.min.js">
-      <DependentUpon>template.ts</DependentUpon>
-    </Content>
     <Content Include="src\view.js">
       <DependentUpon>view.ts</DependentUpon>
     </Content>
     <TypeScriptCompile Include="test\legacy\routeLegacySpec.ts" />
-    <Content Include="src\view.min.js">
-      <DependentUpon>view.ts</DependentUpon>
-    </Content>
     <TypeScriptCompile Include="test\testcommon.ts" />
     <Content Include="test\legacy\routeLegacySpec.js">
-      <DependentUpon>routeLegacySpec.ts</DependentUpon>
-    </Content>
-    <Content Include="test\legacy\routeLegacySpec.min.js">
       <DependentUpon>routeLegacySpec.ts</DependentUpon>
     </Content>
     <TypeScriptCompile Include="test\routeSpec.ts" />
@@ -136,33 +127,20 @@
       <DependentUpon>routeSpec.ts</DependentUpon>
     </Content>
     <TypeScriptCompile Include="test\stateSpec.ts" />
-    <Content Include="test\routeSpec.min.js">
-      <DependentUpon>routeSpec.ts</DependentUpon>
-    </Content>
     <Content Include="test\stateSpec.js">
       <DependentUpon>stateSpec.ts</DependentUpon>
     </Content>
     <TypeScriptCompile Include="test\viewSpec.ts" />
-    <Content Include="test\stateSpec.min.js">
-      <DependentUpon>stateSpec.ts</DependentUpon>
-    </Content>
     <Content Include="test\testcommon.js">
       <DependentUpon>testcommon.ts</DependentUpon>
     </Content>
-    <Content Include="test\testcommon.min.js">
-      <DependentUpon>testcommon.ts</DependentUpon>
-    </Content>
     <Content Include="test\viewSpec.js">
-      <DependentUpon>viewSpec.ts</DependentUpon>
-    </Content>
-    <Content Include="test\viewSpec.min.js">
       <DependentUpon>viewSpec.ts</DependentUpon>
     </Content>
     <Content Include="files.js" />
     <Content Include="test-dev-config.js" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="build\" />
     <Folder Include="doc\turtorials\" />
     <Folder Include="lib\jasmine\impl\" />
     <Folder Include="samples\actions\" />
