--- a/router.csproj
+++ b/router.csproj
@@ -60,6 +60,9 @@
     <Content Include="build\test\routeSpec.js" />
     <Content Include="build\test\stateSpec.js" />
     <Content Include="build\test\viewSpec.js" />
+    <Content Include="src\state.min.js">
+      <DependentUpon>state.ts</DependentUpon>
+    </Content>
     <Content Include="test-grunt-config.js" />
     <Content Include="gruntfile.js" />
     <Content Include="lib\angular\angular-1.0.d.ts" />
