--- a/router.csproj
+++ b/router.csproj
@@ -60,6 +60,10 @@
     <Content Include="build\test\routeSpec.js" />
     <Content Include="build\test\stateSpec.js" />
     <Content Include="build\test\viewSpec.js" />
+    <TypeScriptCompile Include="src\transition.ts" />
+    <Content Include="src\transition.js">
+      <DependentUpon>transition.ts</DependentUpon>
+    </Content>
     <Content Include="test-grunt-config.js" />
     <Content Include="gruntfile.js" />
     <Content Include="lib\angular\angular-1.0.d.ts" />
@@ -132,6 +136,10 @@
     <TypeScriptCompile Include="test\viewSpec.ts" />
     <Content Include="test\testcommon.js">
       <DependentUpon>testcommon.ts</DependentUpon>
+    </Content>
+    <TypeScriptCompile Include="test\transitionSpec.ts" />
+    <Content Include="test\transitionSpec.js">
+      <DependentUpon>transitionSpec.ts</DependentUpon>
     </Content>
     <Content Include="test\viewSpec.js">
       <DependentUpon>viewSpec.ts</DependentUpon>
