--- a/router.csproj
+++ b/router.csproj
@@ -61,6 +61,15 @@
     <Content Include="build\test\stateSpec.js" />
     <Content Include="build\test\viewSpec.js" />
     <TypeScriptCompile Include="src\transition.ts" />
+    <Content Include="samples\kp\contacts.detail.html" />
+    <Content Include="samples\kp\contacts.detail.item.edit.html" />
+    <Content Include="samples\kp\contacts.detail.item.html" />
+    <Content Include="samples\kp\contacts.html" />
+    <Content Include="samples\kp\contacts.list.html" />
+    <Content Include="samples\kp\index.html" />
+    <Content Include="src\directives\uiView.js">
+      <DependentUpon>uiView.ts</DependentUpon>
+    </Content>
     <Content Include="src\transition.js">
       <DependentUpon>transition.ts</DependentUpon>
     </Content>
@@ -92,10 +101,7 @@
     <Content Include="src\common.js">
       <DependentUpon>common.ts</DependentUpon>
     </Content>
-    <TypeScriptCompile Include="src\directives\jemView.ts" />
-    <Content Include="src\directives\jemView.js">
-      <DependentUpon>jemView.ts</DependentUpon>
-    </Content>
+    <TypeScriptCompile Include="src\directives\uiView.ts" />
     <TypeScriptCompile Include="src\legacy\templateDecorator.ts" />
     <TypeScriptCompile Include="src\interfaces.d.ts" />
     <Content Include="src\interfaces.d.js">
