added files to project

--- a/router.csproj
+++ b/router.csproj
@@ -50,15 +50,17 @@
     <Content Include="build\angular-routing.legacy.min.js" />
     <Content Include="build\angular-routing.min.js" />
     <Content Include="build\src\common.js" />
-    <Content Include="build\src\directives\jemView.js" />
+    <Content Include="build\src\directives\uiView.js" />
     <Content Include="build\src\legacy\templateDecorator.js" />
     <Content Include="build\src\route.js" />
     <Content Include="build\src\state.js" />
     <Content Include="build\src\template.js" />
+    <Content Include="build\src\transition.js" />
     <Content Include="build\src\view.js" />
     <Content Include="build\test\legacy\routeLegacySpec.js" />
     <Content Include="build\test\routeSpec.js" />
     <Content Include="build\test\stateSpec.js" />
+    <Content Include="build\test\transitionSpec.js" />
     <Content Include="build\test\viewSpec.js" />
     <TypeScriptCompile Include="src\transition.ts" />
     <Content Include="samples\kp\contacts.detail.html" />
