--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.3.1",
-    "grunt-karma": "~0.3.0"
+    "grunt-contrib-yuidoc": "~0.4.0",
+    "grunt-karma": "~0.3.0",
+    "yuidocjs": "~0.3.40"
   },
   "keywords": []
 }
