Changed the template provider match "template" if as string against an url regex, if it fails the template it self is returned.

--- a/router.csproj
+++ b/router.csproj
@@ -71,6 +71,9 @@
     </Content>
     <None Include="src\prefix" />
     <None Include="src\suffix" />
+    <Content Include="src\stateTransition.js">
+      <DependentUpon>stateTransition.ts</DependentUpon>
+    </Content>
     <Content Include="test-grunt-config.js" />
     <Content Include="gruntfile.js" />
     <Content Include="lib\angular\angular-1.0.d.ts" />
