--- a/router.csproj
+++ b/router.csproj
@@ -41,8 +41,50 @@
     <None Include="package.json" />
     <None Include="README.md" />
     <None Include="resources.md" />
+    <None Include="src\common.js.map">
+      <DependentUpon>common.ts</DependentUpon>
+    </None>
+    <None Include="src\directives\uiView.js.map">
+      <DependentUpon>uiView.ts</DependentUpon>
+    </None>
     <None Include="src\legacy\prefix" />
     <None Include="src\legacy\suffix" />
+    <None Include="src\legacy\templateDecorator.js.map">
+      <DependentUpon>templateDecorator.ts</DependentUpon>
+    </None>
+    <None Include="src\route.js.map">
+      <DependentUpon>route.ts</DependentUpon>
+    </None>
+    <None Include="src\state.js.map">
+      <DependentUpon>state.ts</DependentUpon>
+    </None>
+    <None Include="src\stateTransition.js.map">
+      <DependentUpon>stateTransition.ts</DependentUpon>
+    </None>
+    <None Include="src\template.js.map">
+      <DependentUpon>template.ts</DependentUpon>
+    </None>
+    <None Include="src\view.js.map">
+      <DependentUpon>view.ts</DependentUpon>
+    </None>
+    <None Include="test\legacy\routeLegacySpec.js.map">
+      <DependentUpon>routeLegacySpec.ts</DependentUpon>
+    </None>
+    <None Include="test\routeSpec.js.map">
+      <DependentUpon>routeSpec.ts</DependentUpon>
+    </None>
+    <None Include="test\stateSpec.js.map">
+      <DependentUpon>stateSpec.ts</DependentUpon>
+    </None>
+    <None Include="test\stateTransitionSpec.js.map">
+      <DependentUpon>stateTransitionSpec.ts</DependentUpon>
+    </None>
+    <None Include="test\testcommon.js.map">
+      <DependentUpon>testcommon.ts</DependentUpon>
+    </None>
+    <None Include="test\viewSpec.js.map">
+      <DependentUpon>viewSpec.ts</DependentUpon>
+    </None>
     <None Include="version.yaml" />
   </ItemGroup>
   <ItemGroup>
