--- a/samples.csproj
+++ b/samples.csproj
@@ -90,7 +90,6 @@
     <Content Include="lib\jquery\impl\jquery-1.9.1.min.js" />
     <Content Include="lib\jquery\jquery.d.ts" />
     <Content Include="lib\ui-bootstrap\impl\ui-bootstrap-tpls-0.2.0.min.js" />
-    <Content Include="samples\bootstrap.min.css" />
     <Content Include="samples\configuration.js">
       <DependentUpon>configuration.ts</DependentUpon>
     </Content>
@@ -101,6 +100,7 @@
     <Content Include="samples\legacy\tpl\about.html" />
     <Content Include="samples\legacy\tpl\code.html" />
     <Content Include="samples\legacy\tpl\home.html" />
+    <Content Include="samples\metro.bootstrap.min.css" />
     <Content Include="samples\metro.bootstrap.overwrites.css" />
     <Content Include="samples\simple\index.html" />
     <Content Include="samples\simple\script\application.js" />
@@ -117,6 +117,7 @@
     <Content Include="samples\substates\tpl\blog.post.html" />
     <Content Include="samples\substates\tpl\crumbs.html" />
     <Content Include="samples\substates\tpl\home.html" />
+    <Content Include="samples\animations.css" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="lib\jasmine\impl\" />
@@ -125,6 +126,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="samples\substates\tpl\blog.list.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="samples\configuration.js.map">
+      <DependentUpon>configuration.ts</DependentUpon>
+    </Content>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
